# bitbots_misc

./: .gitignore
bitbots_bringup/launch/: basler_camera.launch  highlevel.launch  load_robot_description.launch
bitbots_live_tool/: CMakeLists.txt  package.xml  plugin.xml  setup.py
bitbots_live_tool/launch/: bitbots_live_tool_rqt.launch
bitbots_live_tool/resources/: ip_config.yaml  livetool.ui  main.ui
bitbots_live_tool/src/bitbots_live_tool_gui/: live_tool_plugin.py
bitbots_live_tool/src/bitbots_live_tool_gui/qt/: game_info_frame.py  namespace_select.py  status_light.py  system_tab.py
bitbots_live_tool_rqt/launch/: bitbots_live_tool_rqt.launch
bitbots_teleop/src/bitbots_teleop/: joy_node.py
system_monitor/: CMakeLists.txt  package.xml  rqt_plugin_system_monitor.xml  setup.py
system_monitor/src/system_monitor/: cpus.py  monitor.py  network_interfaces.py
system_monitor/src/system_monitor_gui/: rqt_plugin.py
