<?xml version="1.0"?>
<package format="2">
  <name>bitbots_live_tool</name>
  <version>1.0.0</version>
  <description>This package provides a comprehensive overview of the current game-state</description>

  <maintainer email="6stelter@informatik.uni-hamburg.de">Sebastian Stelter</maintainer>
  <maintainer email="info@bit-bots.de">Hamburg Bit-Bots</maintainer>
  <author email="6wieczor@informatik.uni-hamburg.de">6wieczor</author>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <depend>python-inflect</depend>
  <depend>python-pyqtgraph</depend>
  <depend>bitbots_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <bitbots_documentation>
      <language>python</language>
      <status>tested_robot</status>
    </bitbots_documentation>
  </export>
</package>
